--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
   <div class="container">
-    <a class="navbar-brand" [routerLink]="['/home']">
+    <a class="navbar-brand" [routerLink]="['/home']" *ngIf=isLogoColor>
       <img src="../../assets/images/logo_color.png" height="30">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -20,7 +20,7 @@
           <a class="nav-link" href="#">CAREERS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">CONTACT</a>
+          <a class="nav-link" [routerLink]="['/contact']">CONTACT</a>
         </li>
       </ul>
     </div>
