--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,13 +1,57 @@
-.navbar {
+nav {
   background: transparent;
-  height: 120px;
+  padding-top: 40px; // height: 120px;
 }
 
 a {
+  position: relative;
   &.nav-link {
     font-weight: 700;
     color: #ffffff !important;
     text-shadow: 0 2px 16px rgba(21, 39, 61, 0.5);
     margin-left: 30px;
+    transition: 300ms all;
+  }
+  @media (min-width: 992px) {
+    &:before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      background-color: #ffffff;
+      visibility: hidden;
+      -webkit-transform: scaleX(0);
+      transform: scaleX(0);
+      -webkit-transition: all 0.3s ease-in-out 0s;
+      transition: all 0.3s ease-in-out 0s;
+    }
+    &:hover:before {
+      visibility: visible;
+      -webkit-transform: scaleX(1);
+      transform: scaleX(1);
+    }
+  }
+}
+
+.fa-bars {
+  font-size: 30px;
+  color: #ffffff;
+}
+
+.navbar-toggler {
+  border: none;
+  &:focus {
+    box-shadow: none;
+  }
+}
+
+button {
+  &.navbar-toggler {
+    &:focus {
+      box-shadow: none !important;
+      outline: none !important;
+    }
   }
 }
