--- a/src/app/portfolio/ptt-ict/ptt-ict.component.html
+++ b/src/app/portfolio/ptt-ict/ptt-ict.component.html
@@ -1,3 +1,8 @@
-<p>
-  ptt-ict works!
-</p>
+<div class="ptt-bg" data-aos="fade-zoom-in" data-aos-offset="200" data-aos-easing="ease-in-out"
+     data-aos-duration="800">
+</div>
+<div class="container">
+  <p>
+    PTT WORKS!
+  </p>
+</div>
