--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -47,6 +47,14 @@ a {
   }
 }
 
+.navbar-collapse {
+  @media (max-width: 991px) {
+    text-align: center;
+    margin-top: 15px;
+    background: rgba(255, 255, 255, 0.2);
+  }
+}
+
 button {
   &.navbar-toggler {
     &:focus {
