--- a/src/app/portfolio/portfolio-list/portfolio-list.component.html
+++ b/src/app/portfolio/portfolio-list/portfolio-list.component.html
@@ -1,3 +1,34 @@
-<div class="container">
-
+<div class="bg-kim" data-aos="fade-zoom-in" data-aos-offset="200" data-aos-easing="ease-in-out"
+     data-aos-duration="800">
+  <img src="../../assets/images/polygon_crop.png" class="img-responsive">
+  <div class="container" id="kim">
+    <div class="row">
+      <div class="col-lg-7">
+        <div class="relevance">
+          <div class="text-left">
+            <div data-aos="fade-down" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="600">
+              <h1>PORTFOLIO</h1>
+            </div>
+            <ul>
+              <li data-aos="fade-right" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="900">
+                <p>
+                  <a [routerLink]="['/portfolio', 'ptt']">PTTD POS</a>
+                </p>
+              </li>
+              <!--<li data-aos="fade-right" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="1200">-->
+                <!--<p>-->
+                  <!--<a [routerLink]="['/portfolio', 'ptt']">SBRAND</a>-->
+                <!--</p>-->
+              <!--</li>-->
+              <!--<li data-aos="fade-right" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="1500">-->
+                <!--<p>-->
+                  <!--<a [routerLink]="['/portfolio', 'ptt']">FA THAILAND</a>-->
+                <!--</p>-->
+              <!--</li>-->
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
