--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -11,6 +11,7 @@ a {
     text-shadow: 0 2px 16px rgba(21, 39, 61, 0.5);
     margin-left: 30px;
     transition: 300ms all;
+    letter-spacing: 1px;
     @media (min-width: 992px) {
       &:before {
         content: "";
