--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,12 +7,17 @@ body, html {
   font-family: 'Prometo';
   font-weight: 300;
   color: #15273d;
+}
 
+
+h1, h2, h3, h4, h5, p {
+  color: #15273d;
 }
 
 p {
   font-family: 'Exo 2';
   font-weight: 300;
+  color: #15273d;
 }
 
 a {
