Change background size to increase load speed

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,5 +1,5 @@
 .bg-kim {
-  background: url("../../assets/images/kim_bg_lg.png");
+  background: url("../../assets/images/kim_bg.png");
   background-size: cover;
   background-position: right;
   height: 100%;
