--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,8 +15,8 @@
           <a class="nav-link" href="#">VALUES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/portfolio', 'list']">PORTFOLIO</a>
-          <!--<a class="nav-link" href="#">PORTFOLIO</a>-->
+          <!--<a class="nav-link" [routerLink]="['/portfolio', 'list']">PORTFOLIO</a>-->
+          <a class="nav-link" href="#">PORTFOLIO</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">CAREERS</a>
