Add ptt portfolio page

--- a/src/app/portfolio/portfolio-list/portfolio-list.component.html
+++ b/src/app/portfolio/portfolio-list/portfolio-list.component.html
@@ -7,17 +7,17 @@
         <div class="relevance">
           <div class="text-left">
             <div data-aos="fade-down" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="600">
-              <h1>PORTFOLIO</h1>
+              <h1>OUR WORKS</h1>
             </div>
             <ul>
               <li data-aos="fade-right" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="900">
                 <p>
-                  <a [routerLink]="['/portfolio', 'ptt']">PTTD POS</a>
+                  <a class="project" [routerLink]="['/portfolio', 'ptt']">PTTD POS</a>
                 </p>
               </li>
               <!--<li data-aos="fade-right" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="1200">-->
                 <!--<p>-->
-                  <!--<a [routerLink]="['/portfolio', 'ptt']">SBRAND</a>-->
+                  <!--<a class="project" [routerLink]="['/portfolio', 'ptt']">SBRAND</a>-->
                 <!--</p>-->
               <!--</li>-->
               <!--<li data-aos="fade-right" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="1500">-->
