--- a/src/app/portfolio/portfolio-list/portfolio-list.component.scss
+++ b/src/app/portfolio/portfolio-list/portfolio-list.component.scss
@@ -70,3 +70,55 @@
 ul {
   padding: 0;
 }
+
+.project {
+  transition: 1000ms all;
+  &:hover {
+    margin-left: 10px;
+    transition: 1000ms all;
+    &::before {
+      content: '//  ';
+      color: #ef6666;
+      animation: fadein 1s;
+      -moz-animation: fadein 1s; /* Firefox */
+      -webkit-animation: fadein 1s; /* Safari and Chrome */
+      -o-animation: fadein 1s; /* Opera */
+    }
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadein { /* Firefox */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadein { /* Safari and Chrome */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadein { /* Opera */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
