--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
   <div class="container">
     <a class="navbar-brand" [routerLink]="['/home']" *ngIf=isLogoColor>
-      <img src="../../assets/images/logo_color.png" height="30">
+      <img src="../../assets/images/logo_color.png" height="30" id="logoColor">
+      <img src="../../assets/images/logo_white.png" height="30" id="logoWhite">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
