Clickable phone number

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -16,8 +16,9 @@
             </div>
             <div class="telephone" data-aos="fade-up" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="1200">
               <p>
-                <i class="fas fa-phone">
-                </i> 02 612 3838
+                <a href="tel:026123838">
+                  <i class="fas fa-phone"></i> 02 612 3838
+                </a>
               </p>
               <p>
                 <a href="mailto:contact@codium.co">
