--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">VALUES</a>
+          <a class="nav-link" href="#">PEOPLE</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/portfolio', 'list']">PORTFOLIO</a>
