--- a/src/app/people/people-list/people-list.component.html
+++ b/src/app/people/people-list/people-list.component.html
@@ -1,3 +1,121 @@
-<p>
-  people-list works!
-</p>
+<div class="container">
+  <div class="text-center">
+    <p>We partner early. We’re comfortable with the rough imperfection of a new venture. We help founders from day zero, when
+      the DNA of their businesses first takes shape.</p>
+  </div>
+</div>
+
+<!-- <div class="team-member">
+  <a href="#">
+    <div class="image-frame">
+      <div class="overlay">
+        <div class="overlay-text">
+          <h3 class="name">SIVABUDH UMPUDH</h3>
+          <h5 class="position">CEO</h5>
+        </div>
+      </div>
+      <div class="image">
+        <img src="http://www.ishootshows.com/wp-content/uploads/2008/07/todd-owyoung-portrait-145238_COB8628-square-600px.jpg" class="img-fluid">
+      </div>
+    </div>
+  </a>
+  <a href="#">
+    <div class="image-frame">
+      <div class="overlay">
+        <div class="overlay-text">
+          <h3 class="name">KHEMANORAK KHATH </h3>
+          <h5 class="position">TECH CONSULT</h5>
+        </div>
+      </div>
+      <div class="image">
+        <img src="https://www.headon.com.au/awards-2018-files/images/MARCUS%20WEB_square.jpg" class="img-fluid">
+      </div>
+    </div>
+  </a>
+</div> -->
+
+<div class="container-fluid" style="margin-top: 50px">
+  <div class="row">
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <a href="#">
+        <div class="image-frame">
+          <div class="overlay">
+            <div class="overlay-text">
+              <!-- <h3 class="name">Sivabudh Umpudh</h3>
+              <h5 class="position">CEO</h5> -->
+            </div>
+          </div>
+          <div class="image">
+            <img src="http://www.ishootshows.com/wp-content/uploads/2008/07/todd-owyoung-portrait-145238_COB8628-square-600px.jpg" class="img-fluid">
+          </div>
+        </div>
+      </a>
+      <div class="text-center" style="margin-top: 20px">
+        <h5 style="margin: 0">Sivabudh Umpudh</h5>
+        <p>CEO</p>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <a href="#">
+        <div class="image-frame">
+          <div class="overlay">
+            <div class="overlay-text">
+              <h3 class="name">Khemanorak Khath</h3>
+              <h5 class="position">TECH CONSULT</h5>
+            </div>
+          </div>
+          <div class="image">
+            <img src="https://www.headon.com.au/awards-2018-files/images/MARCUS%20WEB_square.jpg" class="img-fluid">
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <a href="#">
+        <div class="image-frame">
+          <div class="overlay">
+            <div class="overlay-text">
+              <h3 class="name">Sasiwimon Pattarakitsophon</h3>
+              <h5 class="position">TECH CONSULT</h5>
+            </div>
+          </div>
+          <div class="image">
+            <img src="https://simplerootswellness.com/wp-content/uploads/2015/11/alexa-square-portrait-1.jpg" class="img-fluid">
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <a href="#">
+        <div class="image-frame">
+          <div class="overlay">
+            <div class="overlay-text">
+              <h3 class="name">Sasiwimon Pattarakitsophon</h3>
+              <h5 class="position">TECH CONSULT</h5>
+            </div>
+          </div>
+          <div class="image">
+            <img src="https://static1.squarespace.com/static/58cff61c414fb598d9e947ca/593e7a779de4bbf286f7bbd8/593e7a7dbebafb0e2334fb72/1518696186255/Hugh+Fearnely-Whittingstall+portrait+square.jpg"
+              class="img-fluid">
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <a href="#">
+        <div class="image-frame">
+          <div class="overlay">
+            <div class="overlay-text">
+              <h3 class="name">Sasiwimon Pattarakitsophon</h3>
+              <h5 class="position">TECH CONSULT</h5>
+            </div>
+          </div>
+          <div class="image">
+            <img src="https://static1.squarespace.com/static/58cff61c414fb598d9e947ca/593e7a779de4bbf286f7bbd8/593e7a7dbebafb0e2334fb72/1518696186255/Hugh+Fearnely-Whittingstall+portrait+square.jpg"
+              class="img-fluid">
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
