Add custom animation

--- a/src/app/people/people-list/people-list.component.html
+++ b/src/app/people/people-list/people-list.component.html
@@ -5,44 +5,15 @@
   </div>
 </div>
 
-<!-- <div class="team-member">
-  <a href="#">
-    <div class="image-frame">
-      <div class="overlay">
-        <div class="overlay-text">
-          <h3 class="name">SIVABUDH UMPUDH</h3>
-          <h5 class="position">CEO</h5>
-        </div>
-      </div>
-      <div class="image">
-        <img src="http://www.ishootshows.com/wp-content/uploads/2008/07/todd-owyoung-portrait-145238_COB8628-square-600px.jpg" class="img-fluid">
-      </div>
-    </div>
-  </a>
-  <a href="#">
-    <div class="image-frame">
-      <div class="overlay">
-        <div class="overlay-text">
-          <h3 class="name">KHEMANORAK KHATH </h3>
-          <h5 class="position">TECH CONSULT</h5>
-        </div>
-      </div>
-      <div class="image">
-        <img src="https://www.headon.com.au/awards-2018-files/images/MARCUS%20WEB_square.jpg" class="img-fluid">
-      </div>
-    </div>
-  </a>
-</div> -->
-
 <div class="container-fluid" style="margin-top: 50px">
   <div class="row">
-    <div class="col-sm-6 col-md-4 col-lg-3">
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="300">
       <a href="#">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
-              <!-- <h3 class="name">Sivabudh Umpudh</h3>
-              <h5 class="position">CEO</h5> -->
+              <h3 class="name">Sivabudh Umpudh</h3>
+              <h5 class="position">CEO</h5>
             </div>
           </div>
           <div class="image">
@@ -50,12 +21,8 @@
           </div>
         </div>
       </a>
-      <div class="text-center" style="margin-top: 20px">
-        <h5 style="margin: 0">Sivabudh Umpudh</h5>
-        <p>CEO</p>
-      </div>
     </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="900">
       <a href="#">
         <div class="image-frame">
           <div class="overlay">
@@ -70,7 +37,7 @@
         </div>
       </a>
     </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="1500">
       <a href="#">
         <div class="image-frame">
           <div class="overlay">
@@ -85,23 +52,7 @@
         </div>
       </a>
     </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <a href="#">
-        <div class="image-frame">
-          <div class="overlay">
-            <div class="overlay-text">
-              <h3 class="name">Sasiwimon Pattarakitsophon</h3>
-              <h5 class="position">TECH CONSULT</h5>
-            </div>
-          </div>
-          <div class="image">
-            <img src="https://static1.squarespace.com/static/58cff61c414fb598d9e947ca/593e7a779de4bbf286f7bbd8/593e7a7dbebafb0e2334fb72/1518696186255/Hugh+Fearnely-Whittingstall+portrait+square.jpg"
-              class="img-fluid">
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="2100">
       <a href="#">
         <div class="image-frame">
           <div class="overlay">
