--- a/src/app/people/people-list/people-list.component.scss
+++ b/src/app/people/people-list/people-list.component.scss
@@ -14,20 +14,22 @@
   position: relative;
   width: 100%;
   padding-bottom: 100%;
+  overflow: hidden;
   .overlay {
     height: 100%;
     width: 100%;
     background: #15273d;
     position: absolute;
     text-align: center;
+    transition: all 500ms ease-in-out;
     opacity: 1;
     .overlay-text {
       margin: auto;
       width: 100%;
-      top: 45%;
+      top: 70%;
       position: absolute;
       opacity: 1;
-      transition: all 700ms ease-in-out;
+      transition: all 500ms ease-in-out;
       .name {
         color: #fff;
         margin-bottom: 30px;
@@ -65,6 +67,9 @@
   &:hover {
     img {
       opacity: 1;
+    }
+    .overlay {
+      transform: translate(50%)
     }
   }
 }
