--- a/src/app/people/people-list/people-list.component.html
+++ b/src/app/people/people-list/people-list.component.html
@@ -1,11 +1,13 @@
 <div class="container">
   <div class="text-center">
-    <p>We partner early. We’re comfortable with the rough imperfection of a new venture. We help founders from day zero, when
+    <h1 data-aos="zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="600">OUR TEAM</h1>
+    <p data-aos="zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="700">We partner early. We’re comfortable with the rough imperfection of a new venture. We help founders from day zero, when
       the DNA of their businesses first takes shape.</p>
   </div>
 </div>
 
-<div class="container-fluid" style="margin-top: 50px">
+<div class="container-fluid" style="margin-top: 50px" data-aos="fade-zoom-in" data-aos-offset="200" data-aos-easing="ease-in-out"
+data-aos-duration="800">
   <div class="row">
     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="300">
       <a href="#">
