--- a/src/app/people/people-list/people-list.component.scss
+++ b/src/app/people/people-list/people-list.component.scss
@@ -26,7 +26,7 @@
     .overlay-text {
       margin: auto;
       width: 100%;
-      top: 70%;
+      top: 65%;
       position: absolute;
       opacity: 1;
       transition: all 500ms ease-in-out;
@@ -71,5 +71,17 @@
     .overlay {
       transform: translate(50%)
     }
+  }
+}
+
+h1 {
+  font-size: 56px;
+  font-weight: 700;
+}
+
+.container {
+  p {
+    max-width: 650px;
+    margin: auto;
   }
 }
