First people page

--- a/src/app/people/people-list/people-list.component.html
+++ b/src/app/people/people-list/people-list.component.html
@@ -10,16 +10,16 @@
 data-aos-duration="800">
   <div class="row">
     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="300">
-      <a href="#">
+      <a [routerLink]="['/people', 'pac']">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
-              <h3 class="name">Sivabudh Umpudh</h3>
+              <h3 class="name">Sivabudh<br>Umpudh</h3>
               <h5 class="position">CEO</h5>
             </div>
           </div>
           <div class="image">
-            <img src="http://www.ishootshows.com/wp-content/uploads/2008/07/todd-owyoung-portrait-145238_COB8628-square-600px.jpg" class="img-fluid">
+            <img src="../../../assets/images/photoshoot/pac/pac_2.png" class="img-fluid">
           </div>
         </div>
       </a>
@@ -29,12 +29,12 @@ data-aos-duration="800">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
-              <h3 class="name">Khemanorak Khath</h3>
-              <h5 class="position">TECH CONSULT</h5>
+              <h3 class="name">Khemanorak<br>Khath</h3>
+              <h5 class="position">Tech Consult</h5>
             </div>
           </div>
           <div class="image">
-            <img src="https://www.headon.com.au/awards-2018-files/images/MARCUS%20WEB_square.jpg" class="img-fluid">
+            <img src="../../../assets/images/photoshoot/norak/norak_1.png" class="img-fluid">
           </div>
         </div>
       </a>
@@ -44,12 +44,12 @@ data-aos-duration="800">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
-              <h3 class="name">Sasiwimon Pattarakitsophon</h3>
-              <h5 class="position">TECH CONSULT</h5>
+              <h3 class="name">Supayut<br>Raksuk</h3>
+              <h5 class="position">Backend Developer</h5>
             </div>
           </div>
           <div class="image">
-            <img src="https://simplerootswellness.com/wp-content/uploads/2015/11/alexa-square-portrait-1.jpg" class="img-fluid">
+            <img src="../../../assets/images/photoshoot/nook/nook_1.png" class="img-fluid">
           </div>
         </div>
       </a>
@@ -59,12 +59,12 @@ data-aos-duration="800">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
-              <h3 class="name">Sasiwimon Pattarakitsophon</h3>
-              <h5 class="position">TECH CONSULT</h5>
+              <h3 class="name">Sasiwimon<br>Pattarakitsophon</h3>
+              <h5 class="position">Tester</h5>
             </div>
           </div>
           <div class="image">
-            <img src="https://static1.squarespace.com/static/58cff61c414fb598d9e947ca/593e7a779de4bbf286f7bbd8/593e7a7dbebafb0e2334fb72/1518696186255/Hugh+Fearnely-Whittingstall+portrait+square.jpg"
+            <img src="../../../assets/images/photoshoot/suay/suay_1.png"
               class="img-fluid">
           </div>
         </div>
