--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
           <!--<a class="nav-link" href="#">PORTFOLIO</a>-->
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">CAREERS</a>
+          <a class="nav-link" [routerLink]="['/career']">CAREERS</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/contact']">CONTACT</a>
