--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,14 +12,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngClass]="{ 'black': inverseNavbarColor, 'white': !inverseNavbarColor}">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/people', 'list']">PEOPLE</a>
+          <!-- <a class="nav-link" [routerLink]="['/people', 'list']">PEOPLE</a> -->
+          <a class="nav-link" href="#">PEOPLE</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/portfolio', 'list']">PORTFOLIO</a>
           <!--<a class="nav-link" href="#">PORTFOLIO</a>-->
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/career']">CAREERS</a>
+          <a class="nav-link" [routerLink]="['/careers']">CAREERS</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/contact']">CONTACT</a>
