Optimize images and delete unused images

--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -5,7 +5,7 @@
     <h1 data-aos="zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="600">CAREERS</h1>
     <p data-aos="zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="700">Funny, purposeful team. Make an impact. Daily dose of growth vitamin</p>
     <div data-aos="fade-up" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="800">
-      <button class="button button--wayra" id="openPosition">Open Positions</button>
+      <button class="button button--wayra" id="openPosition" (click)="scrollToJob()">Open Positions</button>
     </div>
   </div>
 </div>
@@ -50,8 +50,8 @@
         </strong>, and read on.</p>
     </div>
     <div class="col-md-5 codium-promo-image">
-      <img src="../../assets/images/careers/threefriends.jpg" alt="" class="img-fluid">
-      <img src="../../assets/images/careers/jamesit.jpg" alt="" class="img-fluid ontop-image">
+      <img src="../../assets/images/careers/threefriends.png" alt="" class="img-fluid">
+      <img src="../../assets/images/careers/jamesit.png" alt="" class="img-fluid ontop-image">
     </div>
   </div>
 </div>
@@ -64,13 +64,13 @@
       Whiteboard, flashcards, post-its, fitting notebooks and pens, code reviews, 10AM daily standup, international</p>
     <div class="row culture-image">
       <div class="col-md-4">
-        <img src="../../assets/images/careers/codereview.jpg" alt="" class="img-fluid">
+        <img src="../../assets/images/careers/codereview.png" alt="" class="img-fluid">
       </div>
       <div class="col-md-4">
-        <img src="../../assets/images/careers/taskboard.jpg" alt="" class="img-fluid">
+        <img src="../../assets/images/careers/taskboard.png" alt="" class="img-fluid">
       </div>
       <div class="col-md-4">
-        <img src="../../assets/images/careers/meeting.jpg" alt="" class="img-fluid">
+        <img src="../../assets/images/careers/meeting.png" alt="" class="img-fluid">
       </div>
     </div>
   </div>
@@ -88,15 +88,15 @@
     <div class="joke-block">
       <div class="row">
         <div class="col-md-6">
-          <img src="../../assets/images/careers/boardgameplay2.jpg" alt="" class="img-fluid">
+          <img src="../../assets/images/careers/boardgameplay2.png" alt="" class="img-fluid">
         </div>
         <div class="col-md-3">
-          <img src="../../assets/images/careers/funny1.jpg" alt="" class="img-fluid">
-          <img src="../../assets/images/careers/funny2.jpg" alt="" class="img-fluid m-t-20">
+          <img src="../../assets/images/careers/funny1.png" alt="" class="img-fluid">
+          <img src="../../assets/images/careers/funny2.png" alt="" class="img-fluid m-t-20">
         </div>
         <div class="col-md-3">
-          <img src="../../assets/images/careers/game_face.JPG" alt="" class="img-fluid">
-          <img src="../../assets/images/careers/funny3.jpg" alt="" class="img-fluid m-t-20">
+          <img src="../../assets/images/careers/game_face.png" alt="" class="img-fluid">
+          <img src="../../assets/images/careers/funny3.png" alt="" class="img-fluid m-t-20">
         </div>
       </div>
     </div>
@@ -110,7 +110,7 @@
     <p class="text-center wrapper-700">We pride ourselves in making our people happy and motivated. Below is what you can expect when you join our team</p>
     <div class="row benefit-detail">
       <div class="col-md-6">
-        <img src="../../assets/images/careers/compensation.jpg" alt="" class="img-fluid">
+        <img src="../../assets/images/careers/compensation.png" alt="" class="img-fluid">
       </div>
       <div class="col-md-6 benefit-description">
         <h4>Compensation</h4>
@@ -159,7 +159,7 @@
         <img src="../../assets/images/careers/outing2-cut.png" alt="" class="img-fluid">
       </div>
       <div class="col-md-6">
-        <img src="../../assets/images/careers/siamatsiam.jpg" alt="" class="img-fluid">
+        <img src="../../assets/images/careers/siamatsiam.png" alt="" class="img-fluid">
       </div>
       <div class="col-md-6 benefit-description">
         <h4>The Daily Commute</h4>
