--- a/src/app/people/people-detail/pac/pac.component.scss
+++ b/src/app/people/people-detail/pac/pac.component.scss
@@ -60,8 +60,10 @@
 
 .quote {
   font-family: Prometo;
-  font-size: 22px;
+  font-size: 32px;
   color: #ef6666;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .text-bold {
