--- a/src/app/people/people-list/people-list.component.html
+++ b/src/app/people/people-list/people-list.component.html
@@ -1,15 +1,18 @@
 <div class="container">
   <div class="text-center">
     <h1 data-aos="zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="600">OUR TEAM</h1>
-    <p data-aos="zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="700">We partner early. We’re comfortable with the rough imperfection of a new venture. We help founders from day zero, when
-      the DNA of their businesses first takes shape.</p>
+    <p data-aos="zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="700">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis purus leo. Praesent pharetra ultrices eros.
+      Interdum et malesuada fames ac ante ipsum primis</p>
   </div>
 </div>
 
-<div class="container-fluid" style="margin-top: 50px" data-aos="fade-zoom-in" data-aos-offset="200" data-aos-easing="ease-in-out"
-data-aos-duration="800">
+<div class="container-fluid" style="margin-top: 50px" data-aos="fade-zoom-in" data-aos-offset="200"
+     data-aos-easing="ease-in-out"
+     data-aos-duration="800">
   <div class="row">
-    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="300">
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
+         data-aos-duration="300">
       <a [routerLink]="['/people', 'pac']">
         <div class="image-frame">
           <div class="overlay">
@@ -24,22 +27,24 @@ data-aos-duration="800">
         </div>
       </a>
     </div>
-    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="900">
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
+         data-aos-duration="900">
       <a href="#">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
-              <h3 class="name">Khemanorak<br>Khath</h3>
-              <h5 class="position">Tech Consult</h5>
+              <h3 class="name">Kittiya<br>Thanasarn</h3>
+              <h5 class="position">Manager</h5>
             </div>
           </div>
           <div class="image">
-            <img src="../../../assets/images/photoshoot/norak/norak_1.png" class="img-fluid">
+            <img src="../../../assets/images/photoshoot/boom/boom_1.png" class="img-fluid">
           </div>
         </div>
       </a>
     </div>
-    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="1500">
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
+         data-aos-duration="1500">
       <a href="#">
         <div class="image-frame">
           <div class="overlay">
@@ -54,7 +59,8 @@ data-aos-duration="800">
         </div>
       </a>
     </div>
-    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="2100">
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
+         data-aos-duration="2100">
       <a href="#">
         <div class="image-frame">
           <div class="overlay">
@@ -65,7 +71,7 @@ data-aos-duration="800">
           </div>
           <div class="image">
             <img src="../../../assets/images/photoshoot/suay/suay_1.png"
-              class="img-fluid">
+                 class="img-fluid">
           </div>
         </div>
       </a>
