--- a/src/app/people/people-list/people-list.component.scss
+++ b/src/app/people/people-list/people-list.component.scss
@@ -15,6 +15,7 @@
   width: 100%;
   padding-bottom: 100%;
   overflow: hidden;
+  cursor: pointer;
   .overlay {
     height: 100%;
     width: 100%;
@@ -32,17 +33,16 @@
       transition: all 500ms ease-in-out;
       .name {
         color: #fff;
-        margin: 0;
         letter-spacing: 1px;
-        margin-bottom: 15px;
-        font-size: 22px;
+        margin-bottom: 20px;
+        font-size: 26px;
         text-transform: uppercase;
       }
       .position {
-        color: #00bbee;
+        color: #ffffff;
         font-family: 'Exo 2';
         padding: 5px 15px;
-        border: 2px solid #00bbee;
+        border: 2px solid #ffffff;
         max-width: 200px;
         font-size: 15px;
         margin: auto;
