Upload more photo

--- a/src/app/people/people-list/people-list.component.html
+++ b/src/app/people/people-list/people-list.component.html
@@ -77,4 +77,72 @@
       </a>
     </div>
   </div>
+  <!--Second Row-->
+  <div class="row">
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
+         data-aos-duration="300">
+      <a [routerLink]="['/people', 'pac']">
+        <div class="image-frame">
+          <div class="overlay">
+            <div class="overlay-text">
+              <h3 class="name">Worawut<br>Kaewlomsap</h3>
+              <h5 class="position">Consult</h5>
+            </div>
+          </div>
+          <div class="image">
+            <img src="../../../assets/images/photoshoot/kim/kim_hallway.png" class="img-fluid">
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
+         data-aos-duration="900">
+      <a href="#">
+        <div class="image-frame">
+          <div class="overlay">
+            <div class="overlay-text">
+              <h3 class="name">Yar Zar<br>Moe Myint</h3>
+              <h5 class="position">Frontend Developer</h5>
+            </div>
+          </div>
+          <div class="image">
+            <img src="../../../assets/images/photoshoot/yz/yz_hallway.png" class="img-fluid">
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
+         data-aos-duration="1500">
+      <a href="#">
+        <div class="image-frame">
+          <div class="overlay">
+            <div class="overlay-text">
+              <h3 class="name">Kriangkrai<br>Phanjan</h3>
+              <h5 class="position">iOS Developer</h5>
+            </div>
+          </div>
+          <div class="image">
+            <img src="../../../assets/images/photoshoot/little/little_hallway.png" class="img-fluid">
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
+         data-aos-duration="2100">
+      <a href="#">
+        <div class="image-frame">
+          <div class="overlay">
+            <div class="overlay-text">
+              <h3 class="name">Jiroj<br>Kaewmanee</h3>
+              <h5 class="position">Frontend Developer</h5>
+            </div>
+          </div>
+          <div class="image">
+            <img src="../../../assets/images/photoshoot/tae/tae_hallway.png"
+                 class="img-fluid">
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
 </div>
