More people detail

--- a/src/app/people/people-list/people-list.component.scss
+++ b/src/app/people/people-list/people-list.component.scss
@@ -34,7 +34,7 @@
       .name {
         color: #fff;
         letter-spacing: 1px;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
         font-size: 26px;
         text-transform: uppercase;
       }
@@ -42,7 +42,7 @@
         color: #ffffff;
         font-family: 'Exo 2';
         padding: 5px 15px;
-        border: 2px solid #ffffff;
+        //border: 2px solid #ffffff;
         max-width: 200px;
         font-size: 15px;
         margin: auto;
