--- a/src/app/people/people-list/people-list.component.html
+++ b/src/app/people/people-list/people-list.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="text-center">
     <h1 data-aos="zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="600">OUR TEAM</h1>
-    <p data-aos="zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="700">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis purus leo. Praesent pharetra ultrices eros.
-      Interdum et malesuada fames ac ante ipsum primis</p>
+    <!--<p data-aos="zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out" data-aos-duration="700">-->
+      <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis purus leo. Praesent pharetra ultrices eros.-->
+      <!--Interdum et malesuada fames ac ante ipsum primis</p>-->
   </div>
 </div>
 
@@ -29,7 +29,7 @@
     </div>
     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
          data-aos-duration="900">
-      <a href="#">
+      <a [routerLink]="['/people', 'boom']">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
@@ -45,7 +45,7 @@
     </div>
     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
          data-aos-duration="1500">
-      <a href="#">
+      <a [routerLink]="['/people', 'nook']">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
@@ -61,7 +61,7 @@
     </div>
     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
          data-aos-duration="2100">
-      <a href="#">
+      <a [routerLink]="['/people', 'suay']">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
@@ -81,12 +81,12 @@
   <div class="row">
     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
          data-aos-duration="300">
-      <a [routerLink]="['/people', 'pac']">
+      <a href="javascript:void(0)">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
               <h3 class="name">Worawut<br>Kaewlomsap</h3>
-              <h5 class="position">Consult</h5>
+              <h5 class="position">Tech Consult</h5>
             </div>
           </div>
           <div class="image">
@@ -97,7 +97,7 @@
     </div>
     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
          data-aos-duration="900">
-      <a href="#">
+      <a href="javascript:void(0)">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
@@ -113,7 +113,7 @@
     </div>
     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
          data-aos-duration="1500">
-      <a href="#">
+      <a href="javascript:void(0)">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
@@ -129,7 +129,7 @@
     </div>
     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
          data-aos-duration="2100">
-      <a href="#">
+      <a href="javascript:void(0)">
         <div class="image-frame">
           <div class="overlay">
             <div class="overlay-text">
@@ -144,5 +144,73 @@
         </div>
       </a>
     </div>
+  </div>
+  <!--Third row-->
+  <div class="row">
+    <div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"
+         data-aos-duration="300">
+      <a href="javascript:void(0)">
+        <div class="image-frame">
+          <div class="overlay">
+            <div class="overlay-text">
+              <h3 class="name">Khema Norak<br>KHAT</h3>
+              <h5 class="position">Tech Consult</h5>
+            </div>
+          </div>
+          <div class="image">
+            <img src="../../../assets/images/photoshoot/norak/norak_1.png" class="img-fluid">
+          </div>
+        </div>
+      </a>
+    </div>
+    <!--<div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"-->
+         <!--data-aos-duration="900">-->
+      <!--<a href="javascript:void(0)">-->
+        <!--<div class="image-frame">-->
+          <!--<div class="overlay">-->
+            <!--<div class="overlay-text">-->
+              <!--<h3 class="name">Kittiya<br>Thanasarn</h3>-->
+              <!--<h5 class="position">Manager</h5>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="image">-->
+            <!--<img src="../../../assets/images/photoshoot/boom/boom_1.png" class="img-fluid">-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"-->
+         <!--data-aos-duration="1500">-->
+      <!--<a href="javascript:void(0)">-->
+        <!--<div class="image-frame">-->
+          <!--<div class="overlay">-->
+            <!--<div class="overlay-text">-->
+              <!--<h3 class="name">Supayut<br>Raksuk</h3>-->
+              <!--<h5 class="position">Backend Developer</h5>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="image">-->
+            <!--<img src="../../../assets/images/photoshoot/nook/nook_1.png" class="img-fluid">-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<div class="col-sm-6 col-md-4 col-lg-3" data-aos="fade-zoom-in" data-aos-offset="150" data-aos-easing="ease-in-out"-->
+         <!--data-aos-duration="2100">-->
+      <!--<a href="javascript:void(0)">-->
+        <!--<div class="image-frame">-->
+          <!--<div class="overlay">-->
+            <!--<div class="overlay-text">-->
+              <!--<h3 class="name">Sasiwimon<br>Pattarakitsophon</h3>-->
+              <!--<h5 class="position">Tester</h5>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="image">-->
+            <!--<img src="../../../assets/images/photoshoot/suay/suay_1.png"-->
+                 <!--class="img-fluid">-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</a>-->
+    <!--</div>-->
   </div>
 </div>
